# underwater

./: .gitignore  README.md  pyproject.toml
artifacts/baselines/: README.md
artifacts/baselines/localization_baseline/: comparison.json  failure_modes.md  metrics.json  package_manifest.json  schema.md  temporal_stability.json
configs/: semi_supervised.toml  semi_supervised_temporal.toml  supcon.pilot.mps.toml  supcon.stage0.toml  supcon.toml  supervised.formal_run.toml  supervised.toml  supervised_bridge.toml  supervised_legacy.toml
data/manifests/: clips.audit.csv  clips.csv  seed_frames.csv  supcon_videos.csv  unlabeled_index.csv
data/manifests/splits/: train.csv  val.csv
data/templates/: frame_annotation.example.json
docs/: localization_bridge_spike.md  yolo_underwater_rollout.md
openspec/changes/add-breaststroke-keypoint-localization/: tasks.md
openspec/changes/add-phase1-supcon-pretraining/: tasks.md
openspec/changes/add-single-model-prediction-viewer/: design.md  tasks.md
openspec/changes/add-video-to-2d-localization-transfer/: README.md  tasks.md
openspec/changes/upgrade-phase1-supcon-video-encoder/: design.md  proposal.md  tasks.md
reports/: annotation-audit.json  failure-modes.md
scripts/: launch_annotation_gui.sh
src/swim_pose/: __init__.py  annotation_gui.py  annotation_web.py  annotations.py  audit.py  cli.py  constants.py  frames.py  io.py  manifest.py  pathing.py  prediction_web.py  sampling.py
tests/: test_localization_bridge.py  test_manifest_migration.py  test_pathing.py  test_supcon_pipeline.py  test_yolo_pose_pipeline.py
(+59 files in other folders)
